# wagyu-MM

./: .dockerignore  .env.example  .gitignore  BUG_REPORT.md  CLAUDE.md  Dockerfile.backend  IMPLEMENTATION_PLAN.md  Makefile  README.md  TEST_PLAN.md  conftest.py  docker-compose.prod.yml  docker-compose.yml  pyproject.toml  rollback.md
bot/: config.py  main.py
bot/agents/: __init__.py  agent_runner.py  base_agent.py  cycle_watchdog.py  exchange_probe.py  order_integrity.py  quote_activity.py
bot/engine/: inventory.py  market_maker.py  quoting.py  volatility.py
bot/engine/algorithms/: avellaneda_stoikov.py  base.py  glft.py  simple_spread.py
bot/exchange/: hyperliquid_client.py  order_manager.py  ws_client.py
bot/feeds/: base.py  hyperliquid_feed.py  kraken_feed.py  price_aggregator.py
bot/persistence/: database.py  models.py  repository.py
bot/risk/: risk_manager.py
bot/utils/: logger.py  math_utils.py
config/: config.example.yaml  config.yaml
frontend/: .dockerignore  Dockerfile  package-lock.json  package.json  tailwind.config.ts  tsconfig.json
frontend/src/app/: globals.css  layout.tsx  page.tsx
scripts/: backtest.py  build_taker_volume.py  daily_report.py  set_benchmark.py
server/: dependencies.py  main.py
server/routers/: chart.py  fills.py  health.py  orders.py  pnl.py  portfolio.py  report.py  status.py
server/schemas/: api_types.py
server/ws/: hub.py
tests/: test_api.py  test_feeds.py  test_integration_bot.py  test_inventory.py  test_math_utils.py  test_quoting.py  test_risk.py  test_volatility.py  test_websocket.py
(+25 files in other folders)
